Udpate presets to new stl file name

--- a/anti_projection.json
+++ b/anti_projection.json
@@ -1,71 +1,5 @@
 {
     "parameterSets": {
-        "4pin 888 1x": {
-            "approx_h": "8",
-            "dash_int": "6",
-            "dash_l": "0.8",
-            "e": "0.01",
-            "fix_d": "3",
-            "fix_h": "3.5",
-            "fix_is_centered": "0",
-            "fix_n": "4",
-            "fix_over": "1.2",
-            "fix_stl": "mangtronix_pin_6mm_hole.stl",
-            "fix_tension": "0",
-            "fix_use_stl": "1",
-            "hook_d": "4",
-            "in_d": "95",
-            "layer_h": "0.35",
-            "make_holes_in_band": "0",
-            "n_stacked": "1",
-            "out_d": "115",
-            "sec": "5",
-            "th": "1.2"
-        },
-        "4pin 888 3x": {
-            "approx_h": "8",
-            "dash_int": "6",
-            "dash_l": "0.8",
-            "e": "0.01",
-            "fix_d": "3",
-            "fix_h": "3.5",
-            "fix_is_centered": "1",
-            "fix_n": "4",
-            "fix_over": "1.2",
-            "fix_stl": "mangtronix_pin_6mm_hole.stl",
-            "fix_tension": "0",
-            "fix_use_stl": "1",
-            "hook_d": "4",
-            "in_d": "95",
-            "layer_h": "0.35",
-            "make_holes_in_band": "0",
-            "n_stacked": "3",
-            "out_d": "115",
-            "sec": "5",
-            "th": "1.2"
-        },
-        "4pin 888 15x": {
-            "approx_h": "8",
-            "dash_int": "6",
-            "dash_l": "0.8",
-            "e": "0.01",
-            "fix_d": "3",
-            "fix_h": "3.5",
-            "fix_is_centered": "1",
-            "fix_n": "4",
-            "fix_over": "1.2",
-            "fix_stl": "mangtronix_pin_6mm_hole.stl",
-            "fix_tension": "0",
-            "fix_use_stl": "1",
-            "hook_d": "4",
-            "in_d": "95",
-            "layer_h": "0.35",
-            "make_holes_in_band": "0",
-            "n_stacked": "15",
-            "out_d": "115",
-            "sec": "5",
-            "th": "1.2"
-        },
         "Nicolas 3pin Version 2": {
             "approx_h": "8",
             "dash_int": "6",
@@ -88,6 +22,72 @@
             "sec": "5",
             "th": "1.2"
         },
+        "4pin 888 15x": {
+            "approx_h": "8",
+            "dash_int": "6",
+            "dash_l": "0.8",
+            "e": "0.01",
+            "fix_d": "3",
+            "fix_h": "3.5",
+            "fix_is_centered": "1",
+            "fix_n": "4",
+            "fix_over": "1.2",
+            "fix_stl": "pin_for_6mm_hole.stl",
+            "fix_tension": "0",
+            "fix_use_stl": "1",
+            "hook_d": "4",
+            "in_d": "95",
+            "layer_h": "0.35",
+            "make_holes_in_band": "0",
+            "n_stacked": "15",
+            "out_d": "115",
+            "sec": "5",
+            "th": "1.2"
+        },
+        "4pin 888 3x": {
+            "approx_h": "8",
+            "dash_int": "6",
+            "dash_l": "0.8",
+            "e": "0.01",
+            "fix_d": "3",
+            "fix_h": "3.5",
+            "fix_is_centered": "1",
+            "fix_n": "4",
+            "fix_over": "1.2",
+            "fix_stl": "pin_for_6mm_hole.stl",
+            "fix_tension": "0",
+            "fix_use_stl": "1",
+            "hook_d": "4",
+            "in_d": "95",
+            "layer_h": "0.35",
+            "make_holes_in_band": "0",
+            "n_stacked": "3",
+            "out_d": "115",
+            "sec": "5",
+            "th": "1.2"
+        },
+        "4pin 888 1x": {
+            "approx_h": "8",
+            "dash_int": "6",
+            "dash_l": "0.8",
+            "e": "0.01",
+            "fix_d": "3",
+            "fix_h": "3.5",
+            "fix_is_centered": "0",
+            "fix_n": "4",
+            "fix_over": "1.2",
+            "fix_stl": "pin_for_6mm_hole.stl",
+            "fix_tension": "0",
+            "fix_use_stl": "1",
+            "hook_d": "4",
+            "in_d": "95",
+            "layer_h": "0.35",
+            "make_holes_in_band": "0",
+            "n_stacked": "1",
+            "out_d": "115",
+            "sec": "5",
+            "th": "1.2"
+        },
         "4pin 888 20x": {
             "approx_h": "8",
             "dash_int": "6",
@@ -98,7 +98,7 @@
             "fix_is_centered": "1",
             "fix_n": "4",
             "fix_over": "1.2",
-            "fix_stl": "mangtronix_pin_6mm_hole.stl",
+            "fix_stl": "pin_for_6mm_hole.stl",
             "fix_tension": "0",
             "fix_use_stl": "1",
             "hook_d": "4",
@@ -120,7 +120,7 @@
             "fix_is_centered": "1",
             "fix_n": "4",
             "fix_over": "1.2",
-            "fix_stl": "mangtronix_pin_6mm_hole.stl",
+            "fix_stl": "pin_for_6mm_hole.stl",
             "fix_tension": "0",
             "fix_use_stl": "1",
             "hook_d": "4",
